# haskell-monads-workshop

./: README.md  haskell-monads-workshop.cabal
src/: Intro.hs  Monads1.hs  Monads2.hs  Monads3.hs
