name:           haskell-monads-workshop
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         jelcyn

library
  hs-source-dirs:  src
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   Intro,
                   Monads1,
                   Monads2,
                   Monads3

